--- a/src/views/_shared/_layout.html
+++ b/src/views/_shared/_layout.html
@@ -16,22 +16,22 @@
 <body class="bg-amber-50">
   <div class="flex flex-col min-h-screen">
     <header>
-      <nav class="bg-blue-700 text-white">
-        <ul class="md:flex hover:*:not-first:block m-auto">
+      <nav class=hover:*:not-first:block md:flex bg-sky-900 text-white">
+        <ul class="md:flex hover:*:not-first:block m-auto bg-sky-800">
           <li class="md:hidden p-4 select-none">
             &equiv;
           </li>
-          <li class="hidden md:block hover:bg-blue-400">
-            <a class="m-auto block p-4" href="/">Schedule</a>
+          <li class="hidden md:block ">
+            <a class="m-auto block p-4  hover:bg-sky-950 text-white text-xl" href="/">Schedule</a>
           </li>
-          <li class="hidden md:block hover:bg-blue-400">
-            <a class="m-auto block p-4" href="/team-members/">Team members</a>
+          <li class="hidden md:block ">
+            <a class="m-auto block p-4  hover:bg-sky-950 text-white text-xl" href="/team-members/">Team members</a>
           </li>
-          <li class="hidden md:block hover:bg-blue-400">
-            <a class="m-auto block p-4" href="/contexts/">Shift Contexts</a>
+          <li class="hidden md:block ">
+            <a class="m-auto block p-4  hover:bg-sky-950 text-white text-xl" href="/contexts/">Shift Contexts</a>
           </li>
-          <li class="hidden md:block hover:bg-blue-400">
-            <a class="m-auto block p-4" href="/colors/">Colors</a>
+          <li class="hidden md:block ">
+            <a class="m-auto block p-4 hover:bg-sky-950 text-white text-xl" href="/colors/">Colors</a>
           </li>
         </ul>
       </nav>
