Fix progressive enhancement bug

--- a/src/views/shiftContext/list.html
+++ b/src/views/shiftContext/list.html
@@ -10,6 +10,7 @@
       const options = {
         method: form.method,
         body: new FormData(form),
+        headers: {"X-Refresh": ""},
       };
 
       try {
