--- a/src/views/_shared/_layout.html
+++ b/src/views/_shared/_layout.html
@@ -9,7 +9,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{% block title %}{% endblock %}</title>
-  <link href="/css/output.css" rel="stylesheet" />
+  <link href="/css/output.css" rel="stylesheet">
+  <link rel="icon" href="data:,">
   {% block styles %}{% endblock %}
   {% block scripts %}{% endblock %}
 </head>
