--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -123,7 +123,7 @@
                             <li>This assignee is external.</li>
                           {% endif %}
                           {% for conflict in timeSlotWarnings.bilocation %}
-                            <li>This assignee is also sceduled at {{ timeSlotLink(conflict) }}.</li>
+                            <li>This assignee is also scheduled at {{ timeSlotLink(conflict) }}.</li>
                           {% endfor %}
                           {% if timeSlotWarnings.adultOnly %}
                             <li>This assignee is under-age.</li>
@@ -250,7 +250,7 @@
         {% for timeSlot in model.warnings.adultOnly %}
           <li>
             {{ teamMemberLink(timeSlot.teamMember) }}
-            is sceduled during
+            is scheduled during
             <a href="/schedule/time-slot/{{ timeSlot.id }}/" class="underline">an 18+ time slot</a>.
           </li>
         {% endfor %}
@@ -265,7 +265,7 @@
           {% for timeSlot in model.warnings.shiftContextPreferenceViolations %}
             <li>
               {{ teamMemberLink(timeSlot.teamMember) }}
-              is sceduled for
+              is scheduled for
               <a href="/contexts/" class="underline">{{
                 timeSlot.shiftContext.name
               }}</a>,
@@ -286,7 +286,7 @@
               {{ teamMemberLink(timeSlot.teamMember) }}
               has been scheduled at
               {{ timeSlotLink(timeSlot) }},
-              and they are unavailabile.
+              and they are unavailable
             </li>
           {% endfor %}
         </ul>
@@ -300,7 +300,7 @@
           {% for teamMember, workDays in model.warnings.maxWeeklyDaysViolations %}
             <li>
               {{ teamMemberLink(teamMember) }}
-              has been sceduled on
+              has been scheduled on
               {{ workDays }}
               day(s), and their maximum is
               {{ teamMember.maxWeeklyDays }}.
