--- a/src/views/unavailability/week.html
+++ b/src/views/unavailability/week.html
@@ -7,9 +7,10 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
+<div class="bg-white drop-shadow-lg pb-2 mt-4" ></div>
   {{ teamMemberTabs(model.teamMember, "unavailability") }}
   <div class="ms-4 p-8 flex gap-4">
-    <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ model.previousWeekString }}/" class="block py-2 px-4 border rounded">
+    <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ model.previousWeekString }}/" class="block py-2 px-4 border rounded bg-sky-800 hover:bg-sky-400 text-white">
       &lt;
     </a>
     <h1 class="p-2 text-2xl font-bold">
@@ -17,13 +18,13 @@
         Week of {{ model.startDate.toLocaleDateString(undefined, { dateStyle: "full" }) }}
       </a>
     </h1>
-    <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ model.nextWeekString }}/" class="block py-2 px-4 border rounded">
+    <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ model.nextWeekString }}/" class="block py-2 px-4 border rounded  bg-sky-800 hover:bg-sky-400 text-white">
       &gt;
     </a>
   </div>
   <div class="ms-4 max-w-lg">
     <div>
-      <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ formatDate(model.startDate, '/') }}/clear/" class="block w-fit p-2 border rounded">
+      <a href="/team-member/{{ model.teamMember.id }}/unavailability/{{ formatDate(model.startDate, '/') }}/clear/" class="block w-fit p-2 border rounded bg-red-800 hover:bg-red-400 text-white">
         Clear
       </a>
     </div>
@@ -32,8 +33,8 @@
         <span>
           {{ row.date.toLocaleDateString(undefined, { dateStyle: "full" }) }}
         </span>
-        <a href="/team-member/{{ model.teamMember.id }}/unavailability/add/{{ formatDate(row.date, '/') }}/">
-          &plus;
+        <a class="w-fit p-0.5 bg-blue-300 rounded" href="/team-member/{{ model.teamMember.id }}/unavailability/add/{{ formatDate(row.date, '/') }}/">
+          ➕
         </a>
       </h2>
       {% for unavailability in row.unavailabilities %}
